--- a/src/index.css
+++ b/src/index.css
@@ -129,4 +129,128 @@
   height: 400px;
   width: 550px;
 }
+
+.footer-row {
+  position: absolute;
+  bottom: -40px;
+  left: 0px;
+  width: 100%;
+}
+
+.footer-row .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 12vh;
+  background-color: #215a84;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.content-title {
+  color: #FF2768;
+  font-weight: bolder;
+  font-size: 25px;
+  padding: 12px;
+  letter-spacing: 4px;
+}
+
+.about {
+  line-height: 28px;
+  position: relative;
+  text-transform: capitalize;
+  color: #032b43;
+  font-family: cursive;
+  padding: 15px;
+}
+
+.about::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-left: 3px solid #215a84;
+  border-top: 3px solid #215a84;
+  height: 80px;
+  width: 120px;
+}
+
+.about::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-bottom: 3px solid #215a84;
+  border-right: 3px solid #215a84;
+  height: 80px;
+  width: 120px;
+}
+
+.blah {
+  position: relative;
+  padding: 15px;
+}
+
+.blah::after {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  border-left: 3px solid #FFBA08;
+  border-top: 3px solid #FFBA08;
+  height: 50px;
+  width: 80px;
+}
+
+.blah::before {
+  content: '';
+  position: absolute;
+  bottom: -6px;
+  right: -6px;
+  border-bottom: 3px solid #FFBA08;
+  border-right: 3px solid #FFBA08;
+  height: 50px;
+  width: 80px;
+}
+
+.skillset {
+  position: relative;
+  padding: 12px;
+  margin: 3px 12px;
+  width: 50%;
+  left: 25%;
+  background-color: salmon;
+}
+
+.skillset::before {
+  position: absolute;
+  content: '';
+  top: 10%;
+  left: 0;
+  height: 120px;
+}
+
+.skillset .skill {
+  margin: 0px 32px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.skillset .skill .skillimg {
+  height: 120px;
+  width: 100px;
+}
 /*# sourceMappingURL=index.css.map */
