--- a/src/index.scss
+++ b/src/index.scss
@@ -129,3 +129,129 @@
 
     
 
+//////////------- F O O T E R . J S ---------------------/////////////
+//////////------- F O O T E R . J S ---------------------/////////////
+//////////------- F O O T E R . J S ---------------------/////////////
+.footer-row{
+    position: absolute;
+    bottom: -40px;
+    left: 0px;
+    width: 100%;
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 12vh;
+    background-color: $darkblue;
+    font-weight: bold;
+    font-size: 18px;
+}
+}
+///////--------------A B O U T . J S ----------------/////////////
+///////--------------A B O U T . J S ----------------/////////////
+///////--------------A B O U T . J S ----------------/////////////
+
+.content-title{
+    color:$red;
+    font-weight: bolder;
+    font-size: 25px;
+    padding: 12px;
+    letter-spacing: 4px;
+    
+}
+
+.about{
+    line-height: 28px;
+    position: relative;
+    text-transform: capitalize;
+    color: $dark;
+    font-family: cursive ;
+    padding: 15px;
+
+    &::after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-left: 3px solid $darkblue;
+        border-top: 3px solid $darkblue;
+        height: 80px;
+        width: 120px;
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        border-bottom: 3px solid $darkblue;
+        border-right: 3px solid $darkblue;
+        height: 80px;
+        width: 120px;
+    }
+}
+
+.blah{
+    position: relative;
+    padding: 15px;
+
+    &::after{
+        content: '';
+        position: absolute;
+        top:-6px;
+        left: -6px;
+        border-left: 3px solid $yellow;
+        border-top: 3px solid $yellow;
+        height: 50px;
+        width: 80px;
+    }
+    &::before{
+        content: '';
+        position: absolute;
+        bottom: -6px;
+        right: -6px;
+        border-bottom: 3px solid $yellow;
+        border-right: 3px solid $yellow;
+        height: 50px;
+        width: 80px;
+    }
+    
+
+}
+
+/////------- S K I L L S E T . J S -----------////////
+/////------- S K I L L S E T . J S -----------////////
+/////------- S K I L L S E T . J S -----------////////
+
+.skillset{
+    position: relative;
+    padding: 12px;
+    margin: 3px 12px;
+    width: 50%;
+    left: 25%;
+    background-color: salmon;
+
+
+    &::before{
+        position: absolute;
+        content: '';
+        top: 10%;
+        left: 0;
+        height: 120px;
+
+    }
+
+    .skill{
+        margin: 0px 32px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+
+        .skillimg{
+            height: 120px;
+            width: 100px;
+        }
+    }
+}
