--- a/src/index.scss
+++ b/src/index.scss
@@ -97,6 +97,9 @@
         border-radius: 20px;
     }
 }
+.margin30{
+    margin: 30px 0px;
+}
 ///////////-----------------------L A N D I N G . J S--------------------////////////
 ///////////-----------------------L A N D I N G . J S--------------------////////////
 ///////////-----------------------L A N D I N G . J S--------------------////////////
@@ -254,6 +257,10 @@
    
     &:hover{
         transform: scale(1.05);
+
+        .box-body{
+            opacity: 1;
+        }
     }
     
 
@@ -290,3 +297,37 @@
   
 }
 
+//////---------- C O N T A C T . J S ----------------//////
+//////---------- C O N T A C T . J S ----------------//////
+//////---------- C O N T A C T . J S ----------------//////
+
+.contact-box{
+    position: relative;
+    width: 660px;
+    background-color: $white;
+    height: 370px;
+    border:1px solid $white;
+    border-radius: 10px;
+    box-shadow: 10px 15px 8px #5a5858;
+    padding:26px;
+
+    .contact-details{
+        width: 300px;
+        align-items: center;
+        height: 300px;
+    }
+    .contact-data{
+        height: 300px;
+        align-items: center;
+    }
+    .contact-button{
+      position: absolute;
+      bottom: 5%;
+      left: 80%;
+    
+    }
+
+    textarea{
+        resize: none;
+    }
+}
