--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,9 @@
 
 
 //------------MEDIA QUERIES-----------------------///
+
+
+
 .nav_menu{
     position: absolute;
     top: 0;
@@ -58,9 +61,7 @@
         }
 
         @include md-mob(){
-            clip-path: circle(6% at 12% 8%);
-            background-color: #333333;
-           
+            display: none;
         }
   
     &:hover{
@@ -163,10 +164,137 @@
     }
     
 }
+.menu_icon-sm{
+    display: none;
+   
+    @include md-mob(){
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        height: 52px;
+        width: 48px;
+        top: 42px;
+        left: 26px;
+        z-index: 23;
+        
+       
+        &:active span:nth-child(1){
+            display: none;
+            transition: all 0.8s ease-in-out;
+        }
+        &:active span:nth-child(2){
+            width: 75%;
+            top: 45%;
+            left: 400%;
+            transform: rotateZ(46deg);
+            background-color: $white;
+            z-index: 25;
+           
+        }
+        &:active span:nth-child(3){
+            transform: rotateZ(-45deg);
+            background-color: $white;
+            z-index: 25;
+            left: 400%;
+        }
+
+    }
+
+           
+    .bar:nth-child(1){
+        display: none;
+        transition: all 0.8s ease-in-out;
+    }
+    .bar:nth-child(2){
+        width: 75%;
+        top: 45%;
+        left: 400%;
+        transform: rotateZ(46deg);
+        background-color: $white;
+        z-index: 25;
+       
+    }
+    .bar:nth-child(3){
+        transform: rotateZ(-45deg);
+        background-color: $white;
+        z-index: 25;
+        left: 400%;
+    }
+
+    span{
+        @include md-mob(){
+        background-color: $dark;
+        position: absolute;
+        left: 0;
+        width: 48px;
+        padding: 2px;
+        background-color: $dark;
+        transition: all 0.4s ease-in-out;
+        }
+    }
+    @for $i from 1 to 4 {
+        span:nth-child(#{$i}){
+             top: percentage(23 * ($i - 1) / 100);
+             width: percentage(25 * $i / 100);
+        }
+    }
+}
+.hidden{
+    display: hidden;
+}
+.nav-group-sm-hidden{
+    display: hidden;
+    ul{
+        display: none;
+    }
+}
+.nav-group-sm{
+    display: none;
+    @include md-mob(){
+        display: block;
+    }
+
+    ul{
+        @include md-mob(){
+                background-color: $dark;
+                position: absolute;
+                top: 1%;
+                left: -5%;
+                list-style: none;
+                height: 100vh;
+                width: 260px;
+                padding:24px 0px;
+                font-size: large;
+                padding:30px;
+                font-size: large;
+                transition: all 1s ease-in-out;
+                z-index: 21;
+                
+        }
+        .nav-items{
+            @include md-mob(){
+                font-weight: bold;
+            padding: 10px 0px;
+            color: $white;
+            margin: 25px 0px;
+            font-weight: bold;
+            }
+            
+        }
+        .nav-items:first-child{
+            margin-top: 63px;
+        }
+    }
+    
+}
 .height-50{
     height: 49vh;
 }
-
+.selected{
+    font-weight: bold;
+    color: $green !important;
+    margin-left: 20px!important;
+}
 ._button{
     font-size: 18px;
     border: 1px solid black;
@@ -190,6 +318,7 @@
          padding: 4px 1px;
          margin-top: 20px;
          width: 130px;
+         z-index: 0;
 
     }
     @media (max-width:400px) {
@@ -590,8 +719,6 @@
         }
     }
     
-
-
     .box-image{
             height: 130;
             padding: 4px;
@@ -669,6 +796,7 @@
         }
         @include md-mob(){
             flex: 0 0 91.666667%;
+            z-index: 0;
         }
         @media (max-width:430px) {
            margin-right:20px;
@@ -688,6 +816,9 @@
             margin-left: 15px;
 
      }
+        @include md-mob(){
+            z-index: 0;
+        }
     }
     .contact-button{
       position: absolute;
