--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0px;
+}
+
 .nav_menu {
   position: absolute;
   top: 0;
@@ -14,8 +18,8 @@
   font-size: large;
   padding: 30px;
   font-size: large;
-  -webkit-clip-path: circle(8% at 14% 9%);
-          clip-path: circle(8% at 14% 9%);
+  -webkit-clip-path: circle(32px at 58px 52px);
+          clip-path: circle(32px at 58px 52px);
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
   z-index: -1;
@@ -23,15 +27,15 @@
 
 @media (max-width: 999px) {
   .nav_menu ul {
-    -webkit-clip-path: circle(8% at 14% 9%);
-            clip-path: circle(8% at 14% 9%);
+    -webkit-clip-path: circle(32px at 58px 52px);
+            clip-path: circle(32px at 58px 52px);
   }
 }
 
 @media (max-width: 725px) {
   .nav_menu ul {
-    -webkit-clip-path: circle(7% at 12% 8%);
-            clip-path: circle(7% at 12% 8%);
+    -webkit-clip-path: circle(32px at 58px 52px);
+            clip-path: circle(32px at 58px 52px);
   }
 }
 
@@ -252,7 +256,7 @@
 .menu_icon-sm .bar:nth-child(2) {
   width: 75%;
   top: 45%;
-  left: 400%;
+  left: 380%;
   -webkit-transform: rotateZ(46deg);
           transform: rotateZ(46deg);
   background-color: #ffff;
@@ -264,7 +268,7 @@
           transform: rotateZ(-45deg);
   background-color: #ffff;
   z-index: 25;
-  left: 400%;
+  left: 380%;
 }
 
 @media (max-width: 576px) {
@@ -314,6 +318,8 @@
 @media (max-width: 576px) {
   .nav-group-sm {
     display: block;
+    position: relative;
+    left: -25px;
   }
 }
 
@@ -322,14 +328,13 @@
     background-color: #032b43;
     position: absolute;
     top: 1%;
-    left: -5%;
+    left: 0%;
     list-style: none;
     height: 100vh;
     width: 260px;
     padding: 24px 0px;
     font-size: large;
-    padding: 30px;
-    font-size: large;
+    padding: 30px 18px;
     -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
     z-index: 21;
@@ -418,6 +423,16 @@
 .light_btn {
   background-color: #F2EEF7;
   color: #032b43;
+}
+
+.light_btn a {
+  color: inherit;
+}
+
+.light_btn a:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+  color: inherit;
 }
 
 @media (max-width: 900px) {
@@ -872,7 +887,7 @@
 
 .box .box-image img {
   border: 1px solid black;
-  border-radius: 50px;
+  border-top-left-radius: 50px;
 }
 
 .box .box-body {
