--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,9 @@
 
 //------------MEDIA QUERIES-----------------------///
 
-
+*{
+    margin: 0px;
+}
 
 .nav_menu{
     position: absolute;
@@ -48,16 +50,16 @@
         font-size: large;
         padding:30px;
         font-size: large;
-        clip-path: circle(8% at 14% 9%);
+        clip-path: circle(32px at 58px 52px);
         transition: all 1s ease-in-out;
         z-index: -1;
 
         @include md-desktop{
-            clip-path: circle(8% at 14% 9%);
+            clip-path: circle(32px at 58px 52px);
             
         }
         @include xl-mob(){
-            clip-path: circle(7% at 12% 8%);
+            clip-path: circle(32px at 58px 52px);
         }
 
         @include md-mob(){
@@ -208,7 +210,7 @@
     .bar:nth-child(2){
         width: 75%;
         top: 45%;
-        left: 400%;
+        left: 380%;
         transform: rotateZ(46deg);
         background-color: $white;
         z-index: 25;
@@ -218,7 +220,7 @@
         transform: rotateZ(-45deg);
         background-color: $white;
         z-index: 25;
-        left: 400%;
+        left: 380%;
     }
 
     span{
@@ -252,6 +254,8 @@
     display: none;
     @include md-mob(){
         display: block;
+        position: relative;
+        left: -25px;
     }
 
     ul{
@@ -259,14 +263,13 @@
                 background-color: $dark;
                 position: absolute;
                 top: 1%;
-                left: -5%;
+                left: 0%;
                 list-style: none;
                 height: 100vh;
                 width: 260px;
                 padding:24px 0px;
                 font-size: large;
-                padding:30px;
-                font-size: large;
+                padding:30px 18px;
                 transition: all 1s ease-in-out;
                 z-index: 21;
                 
@@ -328,7 +331,7 @@
  }
 }
 
-.dark_btn{
+.dark_btn {
     background-color: $dark;
     color:$white;
     
@@ -339,6 +342,13 @@
     }
 }
 .light_btn{
+    a{
+        color: inherit;
+    }
+    a:hover{
+        text-decoration-line: none;
+        color: inherit;
+    }
     background-color: $secondwhite;
     color: $dark;
     @include md-tab{
@@ -725,7 +735,7 @@
             background-color: $secondwhite;
      img{
         border: 1px solid black;
-        border-radius: 50px;
+        border-top-left-radius: 50px;
     }
     }   
     .box-body{
